# G-Compiler

./: .gitignore  CMakeLists.txt  README.md  functional.g  test.cg  test.g
include/: args_manager.h  ast.h  ast_types.h  ast_utils.h  ast_var.h  compiler.h  error_utils.h  expression.h  if.h  lexer.h  lexer_utils.h  llvm.h  llvm_generator.h  llvm_return.h  llvm_types.h  llvm_var.h  tokenizer.h  var.h
src/: args_manager.c  ast.c  compiler.c  error_utils.c  lexer.c  lexer_utils.c  llvm.c  main.c  tokenizer.c  utils.c
src/ast/: ast.c  ast_utils.c  expression.c  if.c
src/lexer/: lexer.c  lexer_utils.c
src/llvm/: llvm.c  llvm_generator.c  llvm_return.c  llvm_var.c
src/parser/: ast.c  ast_expression.c  ast_if.c  ast_utils.c  ast_var.c  expression.c  if.c  var.c
